--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.17.0",
     "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
@@ -19,6 +22,7 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -26,6 +30,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8.4.39",
+    "prisma": "^5.17.0",
     "tailwindcss": "^3.4.6",
     "typescript": "^5"
   }
