--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "next": "14.2.5",
+    "query": "^0.2.0",
     "query-string": "^9.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "string": "^3.3.3",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
