--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-select": "^5.8.0",
+    "react-select-country-list": "^2.2.3",
     "string": "^3.3.3",
+    "world-countries": "^5.0.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
