--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@
 
 DATABASE_URL="mongodb+srv://navish:navish@cluster0.c7b0iyn.mongodb.net/test"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dlyy17mro"
