--- a/.env
+++ b/.env
@@ -7,4 +7,10 @@
 DATABASE_URL="mongodb+srv://navish:navish@cluster0.c7b0iyn.mongodb.net/test"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
 
+GITHUB_ID=Ov23liNPkNyckpvUzCgp
+GITHUB_SECRET=5925ba3d20b17b814953dc5084996ea3e581d152
+
+# GOOGLE_CLIENT_ID=
+# GOOGLE_CLIENT_SECRET=
+
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dlyy17mro"
