--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-leaflet": "^4.2.1",
     "react-select": "^5.8.0",
     "react-select-country-list": "^2.2.3",
+    "react-spinners": "^0.14.1",
     "string": "^3.3.3",
     "world-countries": "^5.0.0",
     "zustand": "^4.5.4"
